2002-08-12  Sven Hartge  <netcomics@ds9.argh.org>

	* lib/ucomics: work-around for always-gets-todays-comic, thanks to
	Chris Hostetter
	* lib/unitedmedia: fixed screwy ordering of panels in Trevor,
	thanks to Chris Hostetter
	* lib/ucomics: "Crabby Road" disappeared so deleted it from the
	module, thanks to Chris Hostetter
		
2002-08-12  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspot (keenspot): A fix to the problem Sven pointed out; that
	keenspot comics seem to download three times.

2002-07-16  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML/Themes/CleanRoundImbedCaption.pm: Changed status bar's
	bg colour from black to "#f7f7f7" to match the graphics.
	* Netcomics/HTML/Themes/CleanRound.pm: Changed status bar's bg colour
	from black to "#f7f7f7" to match the graphics.

2002-07-03  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile.PL: Made creating archives less verbose.

2002-07-02  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/show_comics.pod: Fixed unterminated list.

2002-06-29  Sven Hartge  <netcomics@ds9.argh.org>

        * lib/keenspot: correct $hof for avalon

2002-06-17  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomicsrc: Added an example to how to fill out
	@selected_comics.

2002-06-15  Sven Hartge  <netcomics@ds9.argh.org>

        * MANIFEST, Makefile.PL, lib/grimmy, lib/toonville: added new
	  module for Mother Goose and Grimm, Bug #568112

2002-06-12  Sven Hartge  <netcomics@ds9.argh.org>

        * lib/dragon: fix Bug #568073

2002-06-10  Sven Hartge  <netcomics@ds9.argh.org>

        * Netcomics/HTML/Themes/CleanRound.pm,
	Netcomics/HTML/Themes/CleanRoundImbedCaption.pm: made the borders
	stretch automagically to the right width and height by using them as
        background images for the table cells surrounding the comic, so the
        browser will render them The Right Way[tm].
        * Netcomics/HTML/Themes/CleanRound.pm: {'caption'} was already