@@ -144,8 +144,8 @@ $webpage_title = "Today's Comics From The Web on <DATE>";
 use vars ('$webpage_index_title');
 $webpage_index_title = "Index for %s";
 use vars ('$comics_per_page'); $comics_per_page = undef;
-use vars ('$link_color'); $link_color = "LINK=#9999FF";
-use vars ('$vlink_color'); $vlink_color = "VLINK=#FF99FF";
+use vars ('$link_color'); $link_color = "";
+use vars ('$vlink_color'); $vlink_color = "";
 use vars ('$index_link_color'); $index_link_color = "";
 use vars ('$index_vlink_color'); $index_vlink_color = "";
 use vars ('$background'); $background = "";
